[tool.poetry]
name = "605-202-lab-4"
version = "0.1.0"
description = "Johns Hopkins Class 605.202 Lab 4 "
authors = ["jordancarson <jordanlouiscarson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
